//
// vim:ts=4:sw=4:ai:et:si:sts=4
//

enum ReqType {
    GET_SETTING = 0;
    SET_SETTING = 1;
    LOAD_ACCOUNT = 2;
    SAVE_ACCOUNT = 3;
    GET_PC_LIST = 4;
    LOAD_PC = 5;
    SAVE_PC = 6;
    FIND_PC = 7;
}
